argocd/resources/jupyterhub-workbench/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
  labels:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/part-of: quantum-platform
