argocd/resources/jupyterhub-workbench/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-workbench
spec:
  selector:
    app: jupyterhub-workbench
  ports:
    - {name: proxy, port: 8000, targetPort: proxy}
    - {name: hub, port: 8081, targetPort: hub}
