argocd/resources/jupyterhub-workbench/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-workbench
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jupyter.quantum.nyameko.com
      secretName: jupyterhub-workbench-tls
  rules:
    - host: jupyter.quantum.nyameko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyterhub-workbench
                port:
                  name: proxy
